test_regress/t/t_strength_2_uneq_assign.out
%Error-UNSUPPORTED: t/t_strength_2_uneq_assign.v:10:30: Unsupported: Unable to resolve unequal strength specifier
                                                      : ... In instance t
   10 |    assign (weak0, strong1) a = clk ? 'z : '0;
      |                              ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_strength_2_uneq_assign.v:11:30: Unsupported: Unable to resolve unequal strength specifier
                                                      : ... In instance t
   11 |    assign (strong0, pull1) a = 6'b110001;
      |                              ^
%Error: Exiting due to
